
- Date:
  . Fixed bug #67308 (Serialize of DateTime truncates fractions of second).
    (Adam)

- Fileinfo:
  . Fixed bug #67327 (fileinfo: CDF infinite loop in nelements DoS).
  . Fixed bug #67328 (fileinfo: fileinfo: numerous file_printf calls resulting in
    performance degradation).
  . Fixed bug #67326 (fileinfo: cdf_read_short_sector insufficient boundary check).

- SPL:
  . Fixed bug #67359 (Segfault in recursiveDirectoryIterator). (Laruence)

15 May 2014, PHP 5.6.0 Beta 3

- Core:
  . Fixed bug #67169 (array_splice all elements, then []= gives wrong index).
    (Nikita)
  . Fixed bug #67198 (php://input regression). (Mike)
  . Fixed bug #67247 (spl_fixedarray_resize integer overflow). (Stas)
  . Fixed bug #67250 (iptcparse out-of-bounds read). (Stas)
  . Fixed bug #67252 (convert_uudecode out-of-bounds read). (Stas)

- Date:
  . Fixed bug #67251 (date_parse_from_format out-of-bounds read). (Stas)
  . Fixed bug #67253 (timelib_meridian_with_check out-of-bounds read). (Stas)

- GD:
  . Fixed bug #67248 (imageaffinematrixget missing check of parameters). (Stas)

- OpenSSL:
  . Fixed bug #67224 (Fall back to crypto_type from context if not specified
    explicitly in stream_socket_enable_crypto). (Chris Wright)

- PCRE:
  . Fixed bug #67238 (Ungreedy and min/max quantifier bug, applied patch
    from the upstream). (Anatol)

- mbstring
  . Fixed bug #67199 (mb_regex_encoding mismatch). (Yasuo)

01 May 2014, PHP 5.6.0 Beta 2

- CLI server:
  . Fixed bug #67079 (Missing MIME types for XML/XSL files). (Anatol)

- COM:
  . Fixed bug #66431 (Special Character via COM Interface (CP_UTF8)). (Anatol)

- Core:
  . Fixed bug #65701 (copy() doesn't work when destination filename is created
    by tempnam()). (Boro Sitnikovski)
  . Fixed bug #66015 (Unexpected array indexing in class's static property). (Bob)
  . Added (constant) string/array dereferencing to static scalar expressions
    to complete the set; now possible thanks to bug #66015 being fixed. (Bob)